data/derived/sp14/progs/unify/prog1514.ml.out
Characters 39-52:
  (n mod 10) :: digitsOfInt n/10;;
                ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
